gitops/apps/staging/nginx/deployment-patch.yaml
# vscode-kubernetes-tools: exclude
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web
  namespace: nginx
spec:
  template:
    spec:
      volumes:
        - name: html
          configMap:
            name: html-staging
